# umsl-cmp-sci-4500-project-snapshot-2019-04-25

./: .gitmodules  CMakeLists.txt
python/cozmonaut/op/: __init__.py  friend_list.py  friend_remove.py  interact.py
src/: client.c  client.h  global.c  global.h  log.h  main.c  monitor.c  monitor.h  service.c  service.h
